# -------------------------------------------------------------------------------
# setup.py
#
# Build the HammerSDK library

[metadata]
name = HammerSDK
version = 5.1.18
author = Michael Kade
author_email = mike.kade@hammerspace.com
long_description = file: README.txt
license_files = LICENSE.txt
url = http://www.hammerspace.com

[options]
packages = find:
# package_dir = .
python_requires = >=3.10
install_requires =
    datetime
    typing
    argparse
    typing_extensions
    dataclasses_json
    requests
